Main-top-destination without paging

--- a/Locales/de/main-top-destinations.html
+++ b/Locales/de/main-top-destinations.html
@@ -3,13 +3,12 @@
 </script>
 <script type="text/html" id="mtd_hotels_list_tmpl">
     <div class="container">
-			<h2>Top popular</h2>
+			<h2>Top popular (De)</h2>
 			<h3 class="dest">in <strong>{{city}}</strong>, {{country}}</h3>
             <div id="hotellist" class="popular">
                 <div class="wrapper"></div>
             </div>
-            <div id="srPager" class="paging"></div>
-        </div>
+    </div>
 </script>
 <script type="text/html" id="mtd_hotel_item_tmpl">
     <div class="hotel">
