main-top-destinations.html localized
Signed-off-by: denis.mikhalyov <denis.mikhalyov@gmail.com>

--- a/Locales/de/main-top-destinations.html
+++ b/Locales/de/main-top-destinations.html
@@ -1,9 +1,9 @@
 <script type="text/html" id="td_localized_caption">
-    <h2>Наиболее популярные</h2>
+    <h2>Weitere reiseziele</h2>
 </script>
 <script type="text/html" id="mtd_hotels_list_tmpl">
     <div class="container">
-			<h2>Top popular (De)</h2>
+			<h2>Top beliebt</h2>
 			<h3 class="dest">in <strong>{{city}}</strong>, {{country}}</h3>
             <div id="hotellist" class="popular">
                 <div class="wrapper"></div>
