--- a/Locales/en/main-top-destinations.html
+++ b/Locales/en/main-top-destinations.html
@@ -1,9 +1,9 @@
 <script type="text/html" id="td_localized_caption">
-    <h2>Most popular</h2>
+    <h2>More destinations</h2>
 </script>
 <script type="text/html" id="mtd_hotels_list_tmpl">
     <div class="container">
-		<h2>Top popular (En)</h2>
+		<h2>Top popular</h2>
         <h3 class="dest">in <strong>{{city}}</strong>, {{country}}</h3>
                     <div id="hotellist" class="popular">
                         <div class="wrapper"></div>
