--- a/Locales/ru/main-top-destinations.html
+++ b/Locales/ru/main-top-destinations.html
@@ -1,10 +1,10 @@
 <script type="text/html" id="td_localized_caption">
-    <h2>Наиболее популярные</h2>
+    <h2>Другие направления</h2>
 </script>
 <script type="text/html" id="mtd_hotels_list_tmpl">
     <div class="container">
-			<h2>Top popular</h2>
-			<h3 class="dest">in <strong>{{city}}</strong>, {{country}}</h3>
+			<h2>Наиболее популярные</h2>
+			<h3 class="dest">в <strong>{{city}}</strong>, {{country}}</h3>
             <div id="hotellist" class="popular">
                 <div class="wrapper"></div>
             </div>
@@ -22,7 +22,7 @@
                                 <p class="info"><a href="#!/lookup/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Weitere Hotels in {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
                                 <p class="info">aus <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
                                 <p class="descr">{{description}}</p>
-                                <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Lesen Sie mehr über dieses Hotel">Lesen Sie mehr</a> / <a href="#!/select/{{hotelId}}" title="Schreibe Hotel zu Ihren ausgewählten">Zur Auswahl</a></p>
+                                <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Подробнее об отеле">Подробнее об отеле</a> / <a href="#!/select/{{hotelId}}" title="Добавить в Избранные">В Избранные</a></p>
                             </div>
                     </div>
                 <div class="closer"></div>
